--- a/makepkg-optimize/graphite.sh.in
+++ b/makepkg-optimize/graphite.sh.in
@@ -2,32 +2,18 @@
 #
 #   graphite.sh - Compile with Graphite polyhedral modeling optimization
 #
-#   Copyright (c) 2008-2016 Pacman Development Team <pacman-dev@archlinux.org>
-#
-#   This program is free software; you can redistribute it and/or modify
-#   it under the terms of the GNU General Public License as published by
-#   the Free Software Foundation; either version 2 of the License, or
-#   (at your option) any later version.
-#
-#   This program is distributed in the hope that it will be useful,
-#   but WITHOUT ANY WARRANTY; without even the implied warranty of
-#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#   GNU General Public License for more details.
-#
-#   You should have received a copy of the GNU General Public License
-#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
 
-[[ -n "$LIBMAKEPKG_GRAPHITE_SH" ]] && return
-LIBMAKEPKG_GRAPHITE_SH=1
+[[ -n "$LIBMAKEPKG_BUILDENV_GRAPHITE_SH" ]] && return
+LIBMAKEPKG_BUILDENV_GRAPHITE_SH=1
 
 LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/option.sh"
 
-extra_buildopts+=('graphite')
+build_options+=('graphite')
+buildenv_functions+=('buildenv_graphite')
 
-graphite() {
+buildenv_graphite() {
 	if check_buildoption "graphite" "y"; then
 		CFLAGS+=" -fgraphite-identity -floop-nest-optimize -ftree-loop-distribution -ftree-vectorize"
 		CXXFLAGS+=" -fgraphite-identity -floop-nest-optimize -ftree-loop-distribution -ftree-vectorize"
