--- a/makepkg-optimize/lto.sh.in
+++ b/makepkg-optimize/lto.sh.in
@@ -2,32 +2,18 @@
 #
 #   lto.sh - Compile with link-time optimization
 #
-#   Copyright (c) 2008-2016 Pacman Development Team <pacman-dev@archlinux.org>
-#
-#   This program is free software; you can redistribute it and/or modify
-#   it under the terms of the GNU General Public License as published by
-#   the Free Software Foundation; either version 2 of the License, or
-#   (at your option) any later version.
-#
-#   This program is distributed in the hope that it will be useful,
-#   but WITHOUT ANY WARRANTY; without even the implied warranty of
-#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#   GNU General Public License for more details.
-#
-#   You should have received a copy of the GNU General Public License
-#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
 
-[[ -n "$LIBMAKEPKG_LTO_SH" ]] && return
-LIBMAKEPKG_LTO_SH=1
+[[ -n "$LIBMAKEPKG_BUILDENV_LTO_SH" ]] && return
+LIBMAKEPKG_BUILDENV_LTO_SH=1
 
 LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/option.sh"
 
-extra_buildopts+=('lto')
+build_options+=('lto')
+buildenv_functionss+=('buildenv_lto')
 
-lto() {
+buildenv_lto() {
 	if check_buildoption "lto" "y" && [[ -f "$(gcc -print-search-dirs | grep install | awk '{print $2 "liblto_plugin.so"}')" ]]; then
 		CFLAGS+=" -flto=$(getconf _NPROCESSORS_ONLN)"
 		CXXFLAGS+=" -flto=$(getconf _NPROCESSORS_ONLN)"
