makepkg-optimize: Fix description in optipng-exec.sh.in; forbid pgo macros from running during package()

--- a/makepkg-optimize/optipng-exec.sh.in
+++ b/makepkg-optimize/optipng-exec.sh.in
@@ -1,6 +1,6 @@
 #!/usr/bin/bash
 #
-#   optipng.sh - Optimize PNG image files
+#   optipng.sh - Confirm presence of optipng executable
 #
 
 [[ -n "$LIBMAKEPKG_EXECUTABLE_OPTIPNG_SH" ]] && return
