makepkg-optimize: Fix comments in -exec scripts; use proper permissions; fix executable script filenames

--- a/makepkg-optimize/svgo-exec.sh.in
+++ b/makepkg-optimize/svgo-exec.sh.in
@@ -1,6 +1,6 @@
 #!/usr/bin/bash
 #
-#   svgo.sh - Optimize SVG image files
+#   svgo.sh - Confirm presence of svgo binary
 #
 
 [[ -n "$LIBMAKEPKG_EXECUTABLE_SVGO_SH" ]] && return
