--- a/makepkg-optimize/ZZ-lto.sh.in
+++ b/makepkg-optimize/ZZ-lto.sh.in
@@ -10,21 +10,18 @@ LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/option.sh"
 
-build_options+=('lto' 'lto-thin')
+build_options+=('lto' 'lto-thin' 'lto-clang' 'lto-thin-clang')
 buildenv_functions+=('buildenv_lto')
 
 buildenv_lto() {
-  if check_buildoption "lto" "y" || check_buildoption "lto-thin" "y" && \
-  [[ -f "$(gcc -print-search-dirs | grep install | awk '{print $2 "liblto_plugin.so"}')" ]]; then
-    [[ "$CC" == "clang" || "$CXX" == "clang++" ]] && \
-      ltoflags=" -flto" || \
-      ltoflags=" -flto=$(getconf _NPROCESSORS_ONLN) -flto-partition=none -fno-fat-lto-objects"
-
-    if check_buildoption "lto-thin" "y"; then
-      [[ "$CC" == "clang" || "$CXX" == "clang++" ]] && \
-        ltoflags="${ltoflags// -flto/ -flto=thin}" || \
-        ltoflags="${ltoflags// -flto-partition=none / }"
-    fi
+  if check_buildoption "lto" "y" || check_buildoption "lto-thin" "y" || \
+     check_buildoption "lto-clang" "y" || check_buildoption "lto-thin-clang" "y"; then
+    ltoflags=" -flto"
+    check_buildoption "lto-thin-clang" "y" && ltoflags+="=thin"
+    check_buildoption "lto-thin" "y" || check_buildoption "lto" "y" && \
+    [[ -f "$(gcc -print-search-dirs | grep install | awk '{print $2 "liblto_plugin.so"}')" ]] && \
+      ltoflags+="=$(getconf _NPROCESSORS_ONLN) -fno-fat-lto-objects"
+    check_buildoption "lto" "y" && ltoflags+=" -flto-partition=none"
 
     CFLAGS+="$ltoflags"
     CXXFLAGS+="$ltoflags"
