--- a/makepkg-optimize/buildenv_ext.conf
+++ b/makepkg-optimize/buildenv_ext.conf
@@ -1,5 +1,5 @@
-#-- lto:      Use link-time optimization (monolithic algorithm)
-#-- lto-thin: Use link-time optimization (partitioned algorithm)
-#-- pgo:      Generate or utilize profile guided optimization
-#-- graphite: Use graphite loop optimization
-#-- rice:     Use extreme and unsafe optimization
+#-- lto{,-clang}:      Use monolithic link-time optimization (use "lto-clang" for clang/llvm)
+#-- lto-thin{,-clang}: Use partitioned link-time optimization (use "lto-thin-clang" for clang/llvm)
+#-- pgo:               Generate or utilize profile guided optimization (requires two build and install cycles)
+#-- {graphite,polly}:  Use polyhedral model optimization (use "polly" for clang/llvm)
+#-- rice{,-clang}:     Use extreme and unsafe optimization (use "rice-clang" for clang/llvm)
