--- a/makepkg-optimize/graphite.sh.in
+++ b/makepkg-optimize/graphite.sh.in
@@ -1,6 +1,6 @@
 #!/usr/bin/bash
 #
-#   graphite.sh - Compile with Graphite polyhedral modeling optimization
+#   graphite.sh - Compile with polyhedral model optimization
 #
 
 [[ -n "$LIBMAKEPKG_BUILDENV_GRAPHITE_SH" ]] && return
@@ -10,12 +10,15 @@ LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/option.sh"
 
-build_options+=('graphite')
+build_options+=('graphite' 'polly')
 buildenv_functions+=('buildenv_graphite')
 
 buildenv_graphite() {
-  if check_buildoption "graphite" "y"; then
-    graphiteflags=" -fgraphite-identity -floop-nest-optimize -ftree-loop-distribution -ftree-vectorize"
+  if check_buildoption "graphite" "y" || check_buildoption "polly" "y"; then
+    graphiteflags=" -lgomp -mllvm -polly -mllvm -polly-num-threads=$(getconf _NPROCESSORS_ONLN) -mllvm -polly-parallel"
+    check_buildoption "graphite" "y" && \
+      graphiteflags=" -fgraphite-identity -floop-interchange -floop-nest-optimize -floop-parallelize-all -ftree-loop-distribution -ftree-parallelize-loops=$(getconf _NPROCESSORS_ONLN) -ftree-vectorize"
+
     CFLAGS+="$graphiteflags"
     CXXFLAGS+="$graphiteflags"
   fi
