--- a/makepkg-optimize/PKGBUILD
+++ b/makepkg-optimize/PKGBUILD
@@ -2,14 +2,17 @@
 # Contributor: bartus ( aur\at\bartus.33mail.com )
 
 pkgname=makepkg-optimize
-pkgver=17
-pkgrel=1
+pkgver=18
+pkgrel=2
 pkgdesc='Supplemental build and packaging optimizations for makepkg'
 arch=('any')
 license=('GPL')
 url='https://wiki.archlinux.org/index.php/Makepkg-optimize'
 depends=('pacman')
-optdepends=('upx' 'optipng' 'nodejs-svgo' 'openmp')
+optdepends=("upx: Compress executables"
+            "optipng: Optimize PNG files"
+            "svgo: Optimize SVG files"
+            "openmp: Parallelize loops")
 backup=(etc/makepkg-optimize.conf)
 _buildenv=({pgo,ZZ-lto,graphite,rice}.sh.in)
 _executable=({upx,optipng,svgo}-exec.sh.in)
@@ -19,7 +22,7 @@ source=(${_buildenv[@]}
         ${_executable[@]}
         ${_tidy[@]}
         ${_conf[@]})
-sha1sums=('ab3bca3309f1c083a61b7cd5783614f017ada14e'
+sha1sums=('2b746b2d8bf57691f1b25afce96a2752f6eee7e5'
           '61c765080f3d41dbae15be9212667f9e6364550b'
           'd7a3801037333c582dba976db27cf8896bc1b401'
           'c99d9cb49dd31924a1cb298bcfe142cef31a9fd3'
